tests/cases/device_definition_errors/diagnostics.txt
  error: Unexpected node
   ╭─[cases/device_definition_errors/input.kdl:1:1]
 1 │ a 1
   · ┬
   · ╰── The unexpected node
 2 │ 
   ╰────
  help: Expected a node with one of these names: `device`

  error: Missing object name
   ╭─[cases/device_definition_errors/input.kdl:3:1]
 2 │ 
 3 │ device {
   · ───┬──
   ·    ╰── For this object
 4 │ 
   ╰────
  help: The name is specified by the first entry of the node. It must be an anonymous string, e.g. `device Foo { }`

  error: Missing object name
   ╭─[cases/device_definition_errors/input.kdl:7:1]
 6 │ 
 7 │ device 1 {
   · ───┬── ┬
   ·    │   ╰── Found this entry instead which is not a valid name
   ·    ╰── For this object
 8 │ 
   ╰────
  help: The name is specified by the first entry of the node. It must be an anonymous string, e.g. `device Foo { }`

  warning: Empty node
    ╭─[cases/device_definition_errors/input.kdl:11:1]
 10 │     
 11 │ ╭─▶ device FooD0 {
 12 │ │   
 13 │ ├─▶ }
    · ╰──── The empty node
 14 │     
    ╰────
  help: This type of node should have children to specify what it contains

  error: Unexpected entries
    ╭─[cases/device_definition_errors/input.kdl:15:14]
 14 │ 
 15 │ device FooD1 abc def {
    ·              ─┬─ ─┬─
    ·               │   ╰── This entry is unexpected
    ·               ╰── This entry is unexpected
 16 │ 
    ╰────
  help: Some entries require a name, require to be anonymous or are expected to be of a certain type. Check the book
        to see the specification
        These entries may also just be superfluous. Try removing them or check other errors to see what's expected

  warning: Empty node
    ╭─[cases/device_definition_errors/input.kdl:15:1]
 14 │     
 15 │ ╭─▶ device FooD1 abc def {
 16 │ │   
 17 │ ├─▶ }
    · ╰──── The empty node
 18 │     
    ╰────
  help: This type of node should have children to specify what it contains

  error: Unexpected node
    ╭─[cases/device_definition_errors/input.kdl:20:5]
 19 │ device FooD2 {
 20 │     blah 123
    ·     ──┬─
    ·       ╰── The unexpected node
 21 │ }
    ╰────
  help: Expected a node with one of these names: `default-register-access`, `default-field-access`, `default-buffer-
        access`, `default-byte-order`, `default-bit-order`, `register-address-type`, `command-address-type`, `buffer-
        address-type`, `name-word-boundaries`, `defmt-feature`, `block`, `register`, `command`, `buffer`, `fieldset`,
        `enum`, `extern`

  error: Duplicate node
    ╭─[cases/device_definition_errors/input.kdl:25:5]
 23 │ device FooD3 {
 24 │     default-register-access RW
    ·     ─────────────┬────────────
    ·                  ╰── The original node
 25 │     default-register-access RO
    ·     ─────────────┬────────────
    ·                  ╰── The duplicate node
 26 │ }
    ╰────
  help: This type of node can only appear once. Try removing one of the nodes

  error: Unexpected value
    ╭─[cases/device_definition_errors/input.kdl:29:29]
 28 │ device FooD4 {
 29 │     default-register-access Blah
    ·                             ──┬─
    ·                               ╰── Expected one of these values: `RW`, `RO`, `WO`
 30 │     default-buffer-access
    ╰────

  error: Missing entry
    ╭─[cases/device_definition_errors/input.kdl:30:5]
 29 │     default-register-access Blah
 30 │     default-buffer-access
    ·     ──────────┬──────────
    ·               ╰── This node should have one or more of these entries: `RW`, `RO`, `WO`
 31 │     default-field-access RW RO WO
    ╰────
  help: Check the book for all the requirements

  error: Unexpected entries
    ╭─[cases/device_definition_errors/input.kdl:31:29]
 30 │     default-buffer-access
 31 │     default-field-access RW RO WO
    ·                             ─┬ ─┬
    ·                              │  ╰── This entry is unexpected
    ·                              ╰── This entry is unexpected
 32 │ }
    ╰────
  help: Some entries require a name, require to be anonymous or are expected to be of a certain type. Check the book
        to see the specification
        These entries may also just be superfluous. Try removing them or check other errors to see what's expected

  error: Unexpected entries
    ╭─[cases/device_definition_errors/input.kdl:35:29]
 34 │ device FooD5 {
 35 │     default-register-access value=RW
    ·                             ────┬───
    ·                                 ╰── This entry was expected to be anonymous
 36 │     register-address-type u8
    ╰────
  help: Some entries require a name, require to be anonymous or are expected to be of a certain type. Check the book
        to see the specification
        These entries may also just be superfluous. Try removing them or check other errors to see what's expected

  error: Missing entry
    ╭─[cases/device_definition_errors/input.kdl:35:5]
 34 │ device FooD5 {
 35 │     default-register-access value=RW
    ·     ───────────┬───────────
    ·                ╰── This node should have one or more of these entries: `RW`, `RO`, `WO`
 36 │     register-address-type u8
    ╰────
  help: Check the book for all the requirements

  error: Unexpected type
    ╭─[cases/device_definition_errors/input.kdl:37:26]
 36 │     register-address-type u8
 37 │     command-address-type 16
    ·                          ─┬
    ·                           ╰── Unexpected type: expected a string
 38 │     default-bit-order msb0
    ╰────

  error: Unexpected value
    ╭─[cases/device_definition_errors/input.kdl:38:23]
 37 │     command-address-type 16
 38 │     default-bit-order msb0
    ·                       ──┬─
    ·                         ╰── Expected one of these values: `LSB0`, `MSB0`
 39 │     defmt-feature lol
    ╰────

  error: Unexpected node
    ╭─[cases/device_definition_errors/input.kdl:48:5]
 47 │ 
 48 │     registah
    ·     ────┬───
    ·         ╰── The unexpected node
 49 │     register
    ╰────
  help: Expected a node with one of these names: `default-register-access`, `default-field-access`, `default-buffer-
        access`, `default-byte-order`, `default-bit-order`, `register-address-type`, `command-address-type`, `buffer-
        address-type`, `name-word-boundaries`, `defmt-feature`, `block`, `register`, `command`, `buffer`, `fieldset`,
        `enum`, `extern`

  error: Missing object name
    ╭─[cases/device_definition_errors/input.kdl:49:5]
 48 │     registah
 49 │     register
    ·     ────┬───
    ·         ╰── For this object
 50 │     register foor1 {
    ╰────
  help: The name is specified by the first entry of the node. It must be an anonymous string, e.g. `register Foo { }`

  error: Missing child node
    ╭─[cases/device_definition_errors/input.kdl:50:14]
 49 │     register
 50 │     register foor1 {
    ·              ──┬──
    ·                ╰── This register is missing the required `address` node
 51 │         
    ╰────
  help: Check the book to see all required nodes

  error: Missing child node
    ╭─[cases/device_definition_errors/input.kdl:50:14]
 49 │     register
 50 │     register foor1 {
    ·              ──┬──
    ·                ╰── This register is missing the required `fields` node
 51 │         
    ╰────
  help: Check the book to see all required nodes

  error: Missing entry
    ╭─[cases/device_definition_errors/input.kdl:54:9]
 53 │     register foor2 {
 54 │         address
    ·         ───┬───
    ·            ╰── This node should have one or more of these entries: `integer`
 55 │         address a
    ╰────
  help: Check the book for all the requirements

  error: Unexpected type
    ╭─[cases/device_definition_errors/input.kdl:55:17]
 54 │         address
 55 │         address a
    ·                 ┬
    ·                 ╰── Unexpected type: expected a integer
 56 │         address 1
    ╰────

  error: Duplicate node
    ╭─[cases/device_definition_errors/input.kdl:57:9]
 55 │         address a
 56 │         address 1
    ·         ───┬───
    ·            ╰── The original node
 57 │         address 2
    ·         ───┬───
    ·            ╰── The duplicate node
 58 │         repeat
    ╰────
  help: This type of node can only appear once. Try removing one of the nodes

  error: Missing entry
    ╭─[cases/device_definition_errors/input.kdl:58:9]
 57 │         address 2
 58 │         repeat
    ·         ───┬──
    ·            ╰── This node should have one or more of these entries: `count=<integer>`, `stride=<integer>`
 59 │         reset-value 0x2000_0000
    ╰────
  help: Check the book for all the requirements

  error: Missing child node
    ╭─[cases/device_definition_errors/input.kdl:53:14]
 52 │     }
 53 │     register foor2 {
    ·              ──┬──
    ·                ╰── This register is missing the required `fields` node
 54 │         address
    ╰────
  help: Check the book to see all required nodes

  error: Value out of range
    ╭─[cases/device_definition_errors/input.kdl:63:16]
 62 │         address -1
 63 │         repeat count=18_446_744_073_709_551_616 stride=1
    ·                ────────────────┬───────────────
    ·                                ╰── Value is out of the allowable range: 0..2^64
 64 │         allow-address-overlap #true
    ╰────
  help: The count is encoded as a u64

  error: Unexpected entries
    ╭─[cases/device_definition_errors/input.kdl:64:31]
 63 │         repeat count=18_446_744_073_709_551_616 stride=1
 64 │         allow-address-overlap #true
    ·                               ──┬──
    ·                                 ╰── This entry is unexpected
 65 │         reset-value 0x100 0x00
    ╰────
  help: Some entries require a name, require to be anonymous or are expected to be of a certain type. Check the book
        to see the specification
        These entries may also just be superfluous. Try removing them or check other errors to see what's expected

  error: Value out of range
    ╭─[cases/device_definition_errors/input.kdl:65:21]
 64 │         allow-address-overlap #true
 65 │         reset-value 0x100 0x00
    ·                     ──┬──
    ·                       ╰── Value is out of the allowable range: 0..256
 66 │     }
    ╰────
  help: When specifying the reset values as an array, all numbers must be bytes

  error: Missing child node
    ╭─[cases/device_definition_errors/input.kdl:61:14]
 60 │     }
 61 │     register foor3 {
    ·              ──┬──
    ·                ╰── This register is missing the required `fields` node
 62 │         address -1
    ╰────
  help: Check the book to see all required nodes

  error: Missing entry
    ╭─[cases/device_definition_errors/input.kdl:69:9]
 68 │         address 0
 69 │         fields {
    ·         ───┬──
    ·            ╰── This node should have one or more of these entries: `size-bits=<integer>`
 70 │ 
    ╰────
  help: Check the book for all the requirements

  error: Value out of range
    ╭─[cases/device_definition_errors/input.kdl:75:16]
 74 │         address 1
 75 │         fields size-bits=-1 {
    ·                ──────┬─────
    ·                      ╰── Value is out of the allowable range: 0..2^32
 76 │ 
    ╰────
  help: size-bits is encoded as a u32

  error: Duplicate entry
    ╭─[cases/device_definition_errors/input.kdl:81:55]
 80 │         address 2
 81 │         fields size-bits=0x1_0000_0000 byte-order=BLA byte-order=BE bit-order=gkd bit-order=msb0 allow-bit-overlap allow-bit-overlap=#false {
    ·                                        ───────┬────── ──────┬──────
    ·                                               │             ╰── The duplicate entry
    ·                                               ╰── The original entry
 82 │ 
    ╰────
  help: This type of entry can only appear once. Try removing one of the entries

  error: Duplicate entry
    ╭─[cases/device_definition_errors/input.kdl:81:83]
 80 │         address 2
 81 │         fields size-bits=0x1_0000_0000 byte-order=BLA byte-order=BE bit-order=gkd bit-order=msb0 allow-bit-overlap allow-bit-overlap=#false {
    ·                                                                     ──────┬────── ───────┬──────
    ·                                                                           │              ╰── The duplicate entry
    ·                                                                           ╰── The original entry
 82 │ 
    ╰────
  help: This type of entry can only appear once. Try removing one of the entries

  error: Duplicate entry
    ╭─[cases/device_definition_errors/input.kdl:81:116]
 80 │         address 2
 81 │         fields size-bits=0x1_0000_0000 byte-order=BLA byte-order=BE bit-order=gkd bit-order=msb0 allow-bit-overlap allow-bit-overlap=#false {
    ·                                                                                                  ────────┬──────── ────────────┬───────────
    ·                                                                                                          │                     ╰── The duplicate entry
    ·                                                                                                          ╰── The original entry
 82 │ 
    ╰────
  help: This type of entry can only appear once. Try removing one of the entries

  error: Value out of range
    ╭─[cases/device_definition_errors/input.kdl:81:16]
 80 │         address 2
 81 │         fields size-bits=0x1_0000_0000 byte-order=BLA byte-order=BE bit-order=gkd bit-order=msb0 allow-bit-overlap allow-bit-overlap=#false {
    ·                ───────────┬───────────
    ·                           ╰── Value is out of the allowable range: 0..2^32
 82 │ 
    ╰────
  help: size-bits is encoded as a u32

  error: Unexpected value
    ╭─[cases/device_definition_errors/input.kdl:81:40]
 80 │         address 2
 81 │         fields size-bits=0x1_0000_0000 byte-order=BLA byte-order=BE bit-order=gkd bit-order=msb0 allow-bit-overlap allow-bit-overlap=#false {
    ·                                        ───────┬──────
    ·                                               ╰── Expected one of these values: `LE`, `BE`
 82 │ 
    ╰────

  error: Unexpected value
    ╭─[cases/device_definition_errors/input.kdl:81:69]
 80 │         address 2
 81 │         fields size-bits=0x1_0000_0000 byte-order=BLA byte-order=BE bit-order=gkd bit-order=msb0 allow-bit-overlap allow-bit-overlap=#false {
    ·                                                                     ──────┬──────
    ·                                                                           ╰── Expected one of these values: `LSB0`, `MSB0`
 82 │ 
    ╰────

  error: Value out of range
    ╭─[cases/device_definition_errors/input.kdl:87:16]
 86 │         address 3
 87 │         fields size-bits=0x1_0000_0000 byte-order=1 bit-order=#true allow-bit-overlap  {
    ·                ───────────┬───────────
    ·                           ╰── Value is out of the allowable range: 0..2^32
 88 │ 
    ╰────
  help: size-bits is encoded as a u32

  error: Unexpected type
    ╭─[cases/device_definition_errors/input.kdl:87:40]
 86 │         address 3
 87 │         fields size-bits=0x1_0000_0000 byte-order=1 bit-order=#true allow-bit-overlap  {
    ·                                        ──────┬─────
    ·                                              ╰── Unexpected type: expected a string
 88 │ 
    ╰────

  error: Unexpected type
    ╭─[cases/device_definition_errors/input.kdl:87:53]
 86 │         address 3
 87 │         fields size-bits=0x1_0000_0000 byte-order=1 bit-order=#true allow-bit-overlap  {
    ·                                                     ───────┬───────
    ·                                                            ╰── Unexpected type: expected a string
 88 │ 
    ╰────

  error: Duplicate entry
    ╭─[cases/device_definition_errors/input.kdl:96:20]
 95 │         fields CustomFieldSetName size-bits=8 {
 96 │             bar RW RO
    ·                 ─┬ ─┬
    ·                  │  ╰── The duplicate entry
    ·                  ╰── The original entry
 97 │             bar @a @-1:8 @3 @3:0
    ╰────
  help: This type of entry can only appear once. Try removing one of the entries

  error: Missing entry
    ╭─[cases/device_definition_errors/input.kdl:96:13]
 95 │         fields CustomFieldSetName size-bits=8 {
 96 │             bar RW RO
    ·             ─┬─
    ·              ╰── This node should have one or more of these entries: `address ("@<u32>:<u32>")`
 97 │             bar @a @-1:8 @3 @3:0
    ╰────
  help: Check the book for all the requirements

  error: Bad format
    ╭─[cases/device_definition_errors/input.kdl:97:17]
 96 │             bar RW RO
 97 │             bar @a @-1:8 @3 @3:0
    ·                 ─┬
    ·                  ╰── Value could not be parsed correctly. Use the following format: `@<u32>`
 98 │             baz @7:4 blah
    ╰────
  help: An example: `@10`

  error: Bad format
    ╭─[cases/device_definition_errors/input.kdl:97:20]
 96 │             bar RW RO
 97 │             bar @a @-1:8 @3 @3:0
    ·                    ──┬──
    ·                      ╰── Value could not be parsed correctly. Use the following format: `@<u32>:<u32>`
 98 │             baz @7:4 blah
    ╰────
  help: An example: `@7:0`

  error: Duplicate entry
    ╭─[cases/device_definition_errors/input.kdl:97:29]
 96 │             bar RW RO
 97 │             bar @a @-1:8 @3 @3:0
    ·                          ─┬ ──┬─
    ·                           │   ╰── The duplicate entry
    ·                           ╰── The original entry
 98 │             baz @7:4 blah
    ╰────
  help: This type of entry can only appear once. Try removing one of the entries

  error: Unexpected value
    ╭─[cases/device_definition_errors/input.kdl:98:22]
 97 │             bar @a @-1:8 @3 @3:0
 98 │             baz @7:4 blah
    ·                      ──┬─
    ·                        ╰── Expected one of these values: `@<u32>`, `@<u32>:<u32>`, `RW`, `RO`, `WO`
 99 │         }
    ╰────

  error: Unexpected value
     ╭─[cases/device_definition_errors/input.kdl:106:14]
 105 │             (uint)baz @2:1
 106 │             (i16a)quux @4:3
     ·              ──┬─
     ·                ╰── Expected one of these values: `bool`, `uint`, `int`, `u8`, `u16`, `u32`, `u64`, `i8`, `i16`, `i32`, `i64`, `<base>:<target>`, `<base>:<target>?`
 107 │             (i32:e3?)qus @6:5
     ╰────

  error: Inline enum definition without name
     ╭─[cases/device_definition_errors/input.kdl:119:13]
 118 │             }
 119 │             baz @3:2 {
     ·             ─┬─
     ·              ╰── Add conversion type specification to this field
 120 │ 
     ╰────
  help: An inline enum definition is only possible when a conversion is specified, for example: `(uint:EnumName)`

  error: Inline enum definition without name
     ╭─[cases/device_definition_errors/input.kdl:122:14]
 121 │             }
 122 │             (uint)bam @5:4 {
     ·              ──┬─ ─┬─
     ·                │   ╰── Add conversion type specification to this field
     ·                ╰── A type specifier already exists, but misses the conversion
 123 │ 
     ╰────
  help: An inline enum definition is only possible when a conversion is specified, for example: `(uint:EnumName)`

  error: Unexpected value
     ╭─[cases/device_definition_errors/input.kdl:127:19]
 126 │                 A
 127 │                 B 1.0
     ·                   ─┬─
     ·                    ╰── Expected one of these values: ``, `<integer>`, `default`, `catch-all`
 128 │                 C default-value
     ╰────

  error: Unexpected value
     ╭─[cases/device_definition_errors/input.kdl:128:19]
 127 │                 B 1.0
 128 │                 C default-value
     ·                   ──────┬──────
     ·                         ╰── Expected one of these values: ``, `<integer>`, `default`, `catch-all`
 129 │                 D #null 2
     ╰────

  error: Unexpected entries
     ╭─[cases/device_definition_errors/input.kdl:129:25]
 128 │                 C default-value
 129 │                 D #null 2
     ·                         ┬
     ·                         ╰── This entry is unexpected
 130 │             }
     ╰────
  help: Some entries require a name, require to be anonymous or are expected to be of a certain type. Check the book
        to see the specification
        These entries may also just be superfluous. Try removing them or check other errors to see what's expected

  error: Unexpected value
     ╭─[cases/device_definition_errors/input.kdl:129:19]
 128 │                 C default-value
 129 │                 D #null 2
     ·                   ──┬──
     ·                     ╰── Expected one of these values: ``, `<integer>`, `default`, `catch-all`
 130 │             }
     ╰────

  error: Missing object name
     ╭─[cases/device_definition_errors/input.kdl:133:5]
 132 │     }
 133 │     command {
     ·     ───┬───
     ·        ╰── For this object
 134 │ 
     ╰────
  help: The name is specified by the first entry of the node. It must be an anonymous string, e.g. `command Foo { }`

  error: Missing child node
     ╭─[cases/device_definition_errors/input.kdl:133:5]
 132 │     }
 133 │     command {
     ·     ───┬───
     ·        ╰── This command is missing the required `address` node
 134 │ 
     ╰────
  help: Check the book to see all required nodes

  error: Missing child node
     ╭─[cases/device_definition_errors/input.kdl:136:13]
 135 │     }
 136 │     command fooc0 {
     ·             ──┬──
     ·               ╰── This command is missing the required `address` node
 137 │ 
     ╰────
  help: Check the book to see all required nodes

  error: Missing entry
     ╭─[cases/device_definition_errors/input.kdl:141:9]
 140 │         address 0
 141 │         repeat
     ·         ───┬──
     ·            ╰── This node should have one or more of these entries: `count=<integer>`, `stride=<integer>`
 142 │         blah
     ╰────
  help: Check the book for all the requirements

  error: Unexpected node
     ╭─[cases/device_definition_errors/input.kdl:142:9]
 141 │         repeat
 142 │         blah
     ·         ──┬─
     ·           ╰── The unexpected node
 143 │         in {
     ╰────
  help: Expected a node with one of these names: `allow-address-overlap`, `address`, `repeat`, `in`, `out`

  error: Missing entry
     ╭─[cases/device_definition_errors/input.kdl:143:9]
 142 │         blah
 143 │         in {
     ·         ─┬
     ·          ╰── This node should have one or more of these entries: `size-bits=<integer>`
 144 │             
     ╰────
  help: Check the book for all the requirements

  error: Address specified in wrong order
     ╭─[cases/device_definition_errors/input.kdl:148:15]
 147 │             b @0
 148 │             c @1:2
     ·               ──┬─
     ·                 ╰── Wrong order, try to change to `@2:1`
 149 │         }
     ╰────
  help: Addresses are specified with the high bit first and the low bit last

  error: Missing entry
     ╭─[cases/device_definition_errors/input.kdl:148:13]
 147 │             b @0
 148 │             c @1:2
     ·             ┬
     ·             ╰── This node should have one or more of these entries: `address ("@<u32>:<u32>")`
 149 │         }
     ╰────
  help: Check the book for all the requirements

  error: Missing object name
     ╭─[cases/device_definition_errors/input.kdl:151:5]
 150 │     }
 151 │     buffer {
     ·     ───┬──
     ·        ╰── For this object
 152 │ 
     ╰────
  help: The name is specified by the first entry of the node. It must be an anonymous string, e.g. `buffer Foo { }`

  error: Missing child node
     ╭─[cases/device_definition_errors/input.kdl:151:5]
 150 │     }
 151 │     buffer {
     ·     ───┬──
     ·        ╰── This register is missing the required `address` node
 152 │ 
     ╰────
  help: Check the book to see all required nodes

  error: Missing child node
     ╭─[cases/device_definition_errors/input.kdl:154:12]
 153 │     }
 154 │     buffer foob0 {
     ·            ──┬──
     ·              ╰── This register is missing the required `address` node
 155 │         
     ╰────
  help: Check the book to see all required nodes

  error: Unexpected node
     ╭─[cases/device_definition_errors/input.kdl:159:9]
 158 │         address 0
 159 │         addressssss 500
     ·         ─────┬─────
     ·              ╰── The unexpected node
 160 │         address 1
     ╰────
  help: Expected a node with one of these names: `access`, `address`

  error: Duplicate node
     ╭─[cases/device_definition_errors/input.kdl:160:9]
 157 │     buffer foob1 {
 158 │         address 0
     ·         ───┬───
     ·            ╰── The original node
 159 │         addressssss 500
 160 │         address 1
     ·         ───┬───
     ·            ╰── The duplicate node
 161 │     }
     ╰────
  help: This type of node can only appear once. Try removing one of the nodes

  error: Unexpected value
     ╭─[cases/device_definition_errors/input.kdl:164:16]
 163 │         address 2
 164 │         access BLAH
     ·                ──┬─
     ·                  ╰── Expected one of these values: `RW`, `RO`, `WO`
 165 │         access RO
     ╰────

  error: Missing object name
     ╭─[cases/device_definition_errors/input.kdl:167:5]
 166 │     }
 167 │     block
     ·     ──┬──
     ·       ╰── For this object
 168 │     /// This is a block
     ╰────
  help: The name is specified by the first entry of the node. It must be an anonymous string, e.g. `block Foo { }`

  error: Unexpected node
     ╭─[cases/device_definition_errors/input.kdl:170:9]
 169 │     block b1 {
 170 │         foo
     ·         ─┬─
     ·          ╰── The unexpected node
 171 │         offset d
     ╰────
  help: Expected a node with one of these names: `offset`, `repeat`, `block`, `register`, `command`, `buffer`,
        `fieldset`, `enum`, `extern`

  error: Unexpected type
     ╭─[cases/device_definition_errors/input.kdl:171:16]
 170 │         foo
 171 │         offset d
     ·                ┬
     ·                ╰── Unexpected type: expected a integer
 172 │         offset 5
     ╰────

  error: Duplicate node
     ╭─[cases/device_definition_errors/input.kdl:173:9]
 171 │         offset d
 172 │         offset 5
     ·         ───┬──
     ·            ╰── The original node
 173 │         offset 20
     ·         ───┬──
     ·            ╰── The duplicate node
 174 │     }
     ╰────
  help: This type of node can only appear once. Try removing one of the nodes

  error: Missing entry
     ╭─[cases/device_definition_errors/input.kdl:176:9]
 175 │     block b2 {
 176 │         repeat
     ·         ───┬──
     ·            ╰── This node should have one or more of these entries: `count=<integer>`, `stride=<integer>`
 177 │         repeat count=2 stride=4
     ╰────
  help: Check the book for all the requirements

  error: Missing object name
     ╭─[cases/device_definition_errors/input.kdl:183:5]
 182 │     }
 183 │     fieldset
     ·     ────┬───
     ·         ╰── For this object
 184 │     fieldset fs1 size-bits=16 byte-order=LE {
     ╰────
  help: The name is specified by the first entry of the node. It must be an anonymous string, e.g. `fieldset Foo { }`

  error: Missing entry
     ╭─[cases/device_definition_errors/input.kdl:183:5]
 182 │     }
 183 │     fieldset
     ·     ────┬───
     ·         ╰── This node should have one or more of these entries: `size-bits=<integer>`
 184 │     fieldset fs1 size-bits=16 byte-order=LE {
     ╰────
  help: Check the book for all the requirements

  error: Missing object name
     ╭─[cases/device_definition_errors/input.kdl:187:5]
 186 │     }
 187 │     enum
     ·     ──┬─
     ·       ╰── For this object
 188 │     enum e1 {
     ╰────
  help: The name is specified by the first entry of the node. It must be an anonymous string, e.g. `enum Foo { }`

  error: Unexpected value
     ╭─[cases/device_definition_errors/input.kdl:190:11]
 189 │         A
 190 │         B 1.0
     ·           ─┬─
     ·            ╰── Expected one of these values: ``, `<integer>`, `default`, `catch-all`
 191 │         C default-value
     ╰────

  error: Unexpected value
     ╭─[cases/device_definition_errors/input.kdl:191:11]
 190 │         B 1.0
 191 │         C default-value
     ·           ──────┬──────
     ·                 ╰── Expected one of these values: ``, `<integer>`, `default`, `catch-all`
 192 │         D #null 2
     ╰────

  error: Unexpected entries
     ╭─[cases/device_definition_errors/input.kdl:192:17]
 191 │         C default-value
 192 │         D #null 2
     ·                 ┬
     ·                 ╰── This entry is unexpected
 193 │     }
     ╰────
  help: Some entries require a name, require to be anonymous or are expected to be of a certain type. Check the book
        to see the specification
        These entries may also just be superfluous. Try removing them or check other errors to see what's expected

  error: Unexpected value
     ╭─[cases/device_definition_errors/input.kdl:192:11]
 191 │         C default-value
 192 │         D #null 2
     ·           ──┬──
     ·             ╰── Expected one of these values: ``, `<integer>`, `default`, `catch-all`
 193 │     }
     ╰────

  error: Missing object name
     ╭─[cases/device_definition_errors/input.kdl:204:5]
 203 │     }
 204 │     extern
     ·     ───┬──
     ·        ╰── For this object
 205 │     (abc:something?)extern etype1 a unsafe-size-bits=1
     ╰────
  help: The name is specified by the first entry of the node. It must be an anonymous string, e.g. `extern Foo { }`

  error: Unexpected value
     ╭─[cases/device_definition_errors/input.kdl:205:6]
 204 │     extern
 205 │     (abc:something?)extern etype1 a unsafe-size-bits=1
     ·      ───────┬──────
     ·             ╰── Expected one of these values: `bool`, `uint`, `int`, `u8`, `u16`, `u32`, `u64`, `i8`, `i16`, `i32`, `i64`, `<base>:<target>`, `<base>:<target>?`
 206 │     /// Some docs over here!
     ╰────

  error: Only base type allowed
     ╭─[cases/device_definition_errors/input.kdl:205:6]
 204 │     extern
 205 │     (abc:something?)extern etype1 a unsafe-size-bits=1
     ·      ───────┬──────
     ·             ╰── Type specifier contains conversion
 206 │     /// Some docs over here!
     ╰────
  help: This object doesn't support the conversion syntax. Just specify the base type and remove the `:something?`

  error: Unexpected entries
     ╭─[cases/device_definition_errors/input.kdl:205:35]
 204 │     extern
 205 │     (abc:something?)extern etype1 a unsafe-size-bits=1
     ·                                   ┬
     ·                                   ╰── This entry was expected to have a name (and not be anonymous)
 206 │     /// Some docs over here!
     ╰────
  help: Some entries require a name, require to be anonymous or are expected to be of a certain type. Check the book
        to see the specification
        These entries may also just be superfluous. Try removing them or check other errors to see what's expected

